# ascend_msgs

./: CMakeLists.txt  Dockerfile  README.md  package.xml
action/: ControlFSM.action  Fluid.action  PathPlanner.action
msg/: AIWorldObservation.msg  BodyPartDetection.msg  BoolStamped.msg  ControlFSMState.msg  Coordinates2D.msg  DetectedRobots.msg  DetectedRobotsGlobalPositions.msg  FluidFsmStatus.msg  FluidStatus.msg  GRState.msg  GRStateArray.msg  GhcEvidenceGrid.msg  GhcFluidCommand.msg  GnssNed.msg  GnssRxmRawX.msg  GnssRxmSfrbX.msg  H264Frame.msg  JetsonStatus.msg  LandDetector.msg  LineCounter.msg  MastCandidate.msg  MastCandidateList.msg  MastObservation.msg  NavPath.msg  ObstacleAvoidanceCompletion.msg  ObstacleAvoidanceSetpoint.msg  ObstacleBoundingBoxes.msg  ObstaclePolar.msg  ObstaclePolarArray.msg  Particle.msg  ParticleArray.msg  PathPlannerPlan.msg  PersonDetection.msg  Persons.msg  PolygonArray.msg  SnakeSensor.msg  SnakeSensorArray.msg  Spline.msg  StratsimApplyForce.msg  StratsimCircle.msg  (+5 more)
srv/: ControlFSMEvent.srv  ControlFSMSetActionState.srv  GroundRobotTransform.srv  LQR.srv  ObstacleAvoidanceService.srv  PathOptimizerService.srv  PathPlanner.srv  PositionWarning.srv  ReloadConfig.srv  SplineService.srv  StratsimCreateCircleService.srv
srv/common/: SetPoint.srv
