<package>
  <name>ascend_msgs</name>
  <version>1.0.0</version>
  <description>Ascend message types: custom messages and services for Ascend NTNU packages. </description>
  <author email="martin.sollie@ascendntnu.no">Martin Sollie</author>
  <maintainer email="martin.sollie@ascendntnu.no">Martin Sollie</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ascendntnu.no/</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>